--- a/client-app/package.json
+++ b/client-app/package.json
@@ -6,22 +6,28 @@
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.5.1",
+    "@types/date-fns": "^2.6.0",
     "@types/jest": "^29.5.5",
     "@types/node": "^20.8.4",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/yup": "^0.32.0",
     "axios": "^1.4.0",
+    "date-fns": "^3.3.1",
     "formik": "^2.4.5",
     "mobx": "^6.10.2",
     "mobx-react-lite": "^4.0.5",
     "react": "^18.2.0",
     "react-calendar": "^4.8.0",
+    "react-datepicker": "^6.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
+    "react-toastify": "^10.0.4",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^3.0.0-beta.0",
     "typescript": "^5.2.2",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "yup": "^1.3.3"
   },
   "scripts": {
     "start": "vite",
@@ -49,6 +55,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-datepicker": "^6.0.2",
     "@types/uuid": "^9.0.2",
     "@typescript-eslint/eslint-plugin": "^6.7.5",
     "@vitejs/plugin-react-swc": "^3.4.0",
