--- a/client-app/package.json
+++ b/client-app/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.4.0",
     "date-fns": "^3.3.1",
     "formik": "^2.4.5",
+    "iso-639-1": "^3.1.2",
     "mobx": "^6.10.2",
     "mobx-react-lite": "^4.0.5",
     "react": "^18.2.0",
@@ -25,6 +26,7 @@
     "react-toastify": "^10.0.4",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^3.0.0-beta.0",
+    "translate": "^2.0.2",
     "typescript": "^5.2.2",
     "uuid": "^9.0.0",
     "yup": "^1.3.3"
