--- a/client-app/package.json
+++ b/client-app/package.json
@@ -25,6 +25,7 @@
     "react-datepicker": "^6.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-infinite-scroller": "^1.2.6",
     "react-router-dom": "^6.17.0",
     "react-toastify": "^10.0.4",
     "semantic-ui-css": "^2.5.0",
@@ -61,6 +62,7 @@
   },
   "devDependencies": {
     "@types/react-datepicker": "^6.0.2",
+    "@types/react-infinite-scroller": "^1.2.5",
     "@types/uuid": "^9.0.2",
     "@typescript-eslint/eslint-plugin": "^6.7.5",
     "@vitejs/plugin-react-swc": "^3.4.0",
