--- a/client-app/package.json
+++ b/client-app/package.json
@@ -33,6 +33,7 @@
     "translate": "^2.0.2",
     "typescript": "^5.2.2",
     "uuid": "^9.0.0",
+    "web-vitals": "^3.5.2",
     "yup": "^1.3.3"
   },
   "scripts": {
